--- a/direito-penal-1.html
+++ b/direito-penal-1.html
@@ -80,69 +80,15 @@
 
      const terms = {
 
-
-
-
+"Esquema do crime preterdoloso": "dolo no início, culpa no resultado, nexo causal",
 "Prazo entre a publicação da norma e a sua vigência (latim)": "vacatio legis",
-
-"Prazo em dias em que, caso a Lei não traga em seu próprio texto a data de vigência, será aplicado o Vacatio Legis:": "45 dias",
-
-"Norma jurídica que visa regulamentar outras normas": "lei de introdução às normas do direito brasileiro", 
-
-"Hierarquia de normas (siglas)": "cf, ec, lc, lo, mp",
-
-"Quantitativo de eleitores aptos a votar para que ocorra, nos municípios, o segundo turno para o cargo do poder executivo local?": "200 mil",
-
-"Aos brasileiros e aos estrangeiros residentes no País é garantido a inviolabilidade de 05 direitos": "igualdade, liberdade, propriedade, segurança, vida",
-
-"Manifestações judiciais do tipo decisões individuais" : "monocráticas",
-
-"Manifestações judiciais do tipo decisões coletivas" : "acórdãos",
-
-"Instrumento jurídico que resume a orientação normativa de um tribunal": "súmula simples",
-
-"Instrumento jurídico que resume a orientação normativa do Supremo Tribunal Federal (STF)  - entendimento predominante do STF": "súmula vinculante",
-
-"Interpretação que busca entender uma norma jurídica com base no objetivo ou finalidade que ela visa alcançar": "teleológica",
-
-"Norma jurídica que perdeu sua validade e eficácia, deixando de produzir efeitos no ordenamento jurídico.": "revogada",
-
-"Instituto jurídico no Brasil que tem como objetivo assegurar a proteção imediata de um direito, quando há risco de dano grave ou irreparável, ou quando há evidências suficientes que demonstrem a probabilidade do direito alegado.": "tutela de urgência",
-
-"Reprodução, imitação ou cópia não autorizada de uma obra protegida por direitos autorais.": "contrafação", 
-
-"Multas de natureza coercitiva fixadas pelo juiz para compelir uma das partes a cumprir determinada obrigação estabelecida em uma decisão judicial": "astreintes",
-
-"Instrumentos do controle de constitucionalidade no Brasil, na ordem: mais restritas (somente as normas) e a mais ampla (qualquer ato do poder público)": "adin, adpf",
-
-"O poder constituinte derivado reformador manifesta-se por meio de:": "emendas constitucionais",
-
-"O poder constituinte derivado decorrente manifesta-se por meio de:": "constituições estaduais",
-
-"No CPC, o processo começa por iniciativa da XXXX e se desenvolve por YYYY YYYY, salvo as exceções previstas em lei": "parte, impulso oficial",
-
-"É um método de solução de conflitos em que um terceiro imparcial auxilia as partes a dialogarem e encontrarem uma solução conjunta para o litígio": "mediação",
-
-"É um método de solução de conflitos em que um terceiro imparcial atua de forma mais proativa para sugerir soluções ao conflito, buscando aproximar as partes para que alcancem um acordo": "conciliação",
-
-"É um método de solução de conflitos em que as próprias partes, com ou sem auxílio de seus advogados, dialogam diretamente para alcançar uma solução que atenda aos interesses mútuos": "negociação",
-
-"É um método de solução de conflitos em que as partes escolhem agentes para resolver a controvérsia, com base na autonomia da vontade" : "arbitragem",
-
-"O poder constituinte XXXX manifesta-se quando uma decisão do STF altera o sentido de um dispositivo constitucional, sem, no entanto, alterar seu texto.": "difuso",
-
-"Quando o STF ampliou o conceito de família para incluir uniões estáveis entre pessoas do mesmo sexo, o tribunal utilizou o XXXXX XXXXXXXXX XXXXXX" : "poder constituinte difuso",
-
-
-
-
-
-
-
+"O agente completa a execução do crime, mas atua para evitar o resultado, que não chega a se concretizar por sua intervenção.": "arrependimento eficaz",
+"Maria dá um tiro em alguém, mas logo chama o socorro e a vítima sobrevive graças à sua ação imediata.": "arrependimento eficaz",
+"A desistência voluntária ocorre em que momento?": "durante a execução",    
+"O arrependimento eficaz ocorre em que momento?": "após a execução",   
+"Na desistência voluntária o agente impede o crime": "parando a execução",   
+"No arrependimento eficaz o agente impede o crime": "agindo para evitar o resultado",   
 };
-
-
-
 
         let currentTerm;
 
