--- a/direito-penal-1.html
+++ b/direito-penal-1.html
@@ -84,10 +84,10 @@
 "Prazo entre a publicação da norma e a sua vigência (latim)": "vacatio legis",
 "O agente completa a execução do crime, mas atua para evitar o resultado, que não chega a se concretizar por sua intervenção.": "arrependimento eficaz",
 "Maria dá um tiro em alguém, mas logo chama o socorro e a vítima sobrevive graças à sua ação imediata.": "arrependimento eficaz",
-"A desistência voluntária ocorre em que momento?": "durante a execução",    
-"O arrependimento eficaz ocorre em que momento?": "após a execução",   
+"Em relação a execução, a desistência voluntária ocorre em que momento?": "durante a execução",    
+"Em relação a execução, o arrependimento eficaz ocorre em que momento?": "após a execução",   
 "Na desistência voluntária o agente impede o crime": "parando a execução",   
-"No arrependimento eficaz o agente impede o crime": "agindo para evitar o resultado",   
+"No arrependimento eficaz o agente impede o crime": "evitando o resultado",   
 };
 
         let currentTerm;
