--- a/lei-da-inovacao.html
+++ b/lei-da-inovacao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo de Termos de Direito</title>
+    <title>Jogo de Termos da Lei de Inovação</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,7 +43,7 @@
 
 <body>
 
-    <h1>Termos sobre Direito</h1>
+    <h1>Termos da Lei de Inovação</h1>
 
     <p>Digite o termo referente a definição apresentada:</p>
 
