--- a/lei-da-inovacao.html
+++ b/lei-da-inovacao.html
@@ -78,6 +78,7 @@
 "Subvenção a microempresas e a empresas de pequeno e médio porte, com base em dotações orçamentárias de órgãos e entidades da administração pública, destinada ao pagamento de compartilhamento e uso de infraestrutura de pesquisa e desenvolvimento tecnológicos, de contratação de serviços tecnológicos especializados, ou transferência de tecnologia, quando esta for meramente complementar àqueles serviços.": "bônus tecnológico",
 "Conhecimento acumulado pelo pessoal da organização, passível de aplicação em projetos de pesquisa, desenvolvimento e inovação.": "capital intelectual",
 "Formalmente o que representam: criador, incubadora de empresas, ict, nit, fundação de apoio, parque tecnológico, pólo tecnológico, bônus tecnológico, capital cultural": "pessoa física, organização, órgão, estrutura, fundação, complexo, ambiente industrial e tecnológico, subvenção, conhecimento",
+"Ambientes promotores da inovação (do menor para o maior).": "incubadora, parque, pólo",         
 
 };
 
