--- a/lei-da-inovacao.html
+++ b/lei-da-inovacao.html
@@ -78,7 +78,20 @@
 "Subvenção a microempresas e a empresas de pequeno e médio porte, com base em dotações orçamentárias de órgãos e entidades da administração pública, destinada ao pagamento de compartilhamento e uso de infraestrutura de pesquisa e desenvolvimento tecnológicos, de contratação de serviços tecnológicos especializados, ou transferência de tecnologia, quando esta for meramente complementar àqueles serviços.": "bônus tecnológico",
 "Conhecimento acumulado pelo pessoal da organização, passível de aplicação em projetos de pesquisa, desenvolvimento e inovação.": "capital intelectual",
 "Formalmente o que representam: criador, incubadora de empresas, ict, nit, fundação de apoio, parque tecnológico, pólo tecnológico, bônus tecnológico, capital cultural": "pessoa física, organização, órgão, estrutura, fundação, complexo, ambiente industrial e tecnológico, subvenção, conhecimento",
-"Ambientes promotores da inovação (do menor para o maior).": "incubadora, parque, pólo",         
+"Ambientes promotores da inovação (do menor para o maior).": "incubadora, parque, pólo",      
+"Formas de extração de valor da PI": "cessão, licenciamento, uso direto",
+"Transferência de direitos de uso da PI a terceiros": "licenciamento",
+"Modalidade de licenciamento que envolve a transferência de um sistema completo de negócios, incluindo marca, know-how e processos operacionais": "franquia",
+"Tipos de contratos de transferência de tecnologia COM direitos de PI": "cessão, licenciamento",
+"Tipos de contratos de transferência de tecnologia SEM direitos de PI": "fornecimento de tecnologia, serviço de assistência técnica",
+"Licenciamentos, quanto a exclusividade, podem ser:": "exclusivos, não-exclusivos",
+"Possibilidade de o licenciante fazer um novo contrato de licenciamento para terceiros": "sublicenciamento",
+"Pagamento de uma porcentagem sobre as vendas de produtos ou serviços que utilizam a tecnologia licenciada": "royalty",
+"Formas de remuneração em uma Transferência de Tecnologia": "participação acionária, royalty, taxa de acesso, taxa de uso",
+"No campo da avaliação quantitativa para VALORAÇÃO DE PI, três abordagens principais são utilizadas:": "custo, mercado, renda",
+
+
+
 
 };
 
