--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <body>
   <h1>Índice de Arquivos - João Ricardão</h1>
   <ul>
+    <li><a href="ingles.html">Tradução de Termos em Inglẽs</a></li>
     <li><a href="lei-da-inovacao.html">Lei da Inovação</a></li>
     <li><a href="direito-penal-1.html">Direito Penal 1</a></li>
     <li><a href="direito-constitucional-1.html">Direito Constitucional 1</a></li>
