--- a/ingles.html
+++ b/ingles.html
@@ -72,7 +72,7 @@
 "sensor vestível": "wearable sensor",  
 "química analítica": "analytical chemistry",  
 "código-fonte": "source code",  
-"configuração": "configuration",  
+"configuração": "setup",  
 "fluxograma": "flowchart",  
 "gráfico de caixa": "box plot",  
 "gráfico de pizza": "pie chart"
