--- a/ingles.html
+++ b/ingles.html
@@ -75,7 +75,11 @@
 "configuração": "setup",  
 "fluxograma": "flowchart",  
 "gráfico de caixa": "box plot",  
-"gráfico de pizza": "pie chart"
+"gráfico de pizza": "pie chart",
+"precisão": "accuracy",
+"revisão abrangente": "comprehensive review",
+"acionado por tendão": "tendon-driven",
+"acionado por cabo": "cable-driven"
 
 };
 
