--- a/ingles.html
+++ b/ingles.html
@@ -72,14 +72,18 @@
 "sensor vestível": "wearable sensor",  
 "química analítica": "analytical chemistry",  
 "código-fonte": "source code",  
-"configuração": "setup",  
 "fluxograma": "flowchart",  
 "gráfico de caixa": "box plot",  
 "gráfico de pizza": "pie chart",
 "precisão": "accuracy",
 "revisão abrangente": "comprehensive review",
 "acionado por tendão": "tendon-driven",
-"acionado por cabo": "cable-driven"
+"acionado por cabo": "cable-driven",
+"ambiente": "environment",
+"objeto inteligente": "smart object",
+"atuador de sensor": "sensor actuator",
+"fornece": "provide",
+"endereço": "address",
 
 };
 
