--- a/ingles.html
+++ b/ingles.html
@@ -84,6 +84,10 @@
 "atuador de sensor": "sensor actuator",
 "fornece": "provide",
 "endereço": "address",
+"sistema ciberfísico": "cyber-physical system",
+"melhorar": "improve",
+"sistema embarcado": "embedded system",
+         
 
 };
 
