--- a/ingles.html
+++ b/ingles.html
@@ -87,6 +87,9 @@
 "sistema ciberfísico": "cyber-physical system",
 "melhorar": "improve",
 "sistema embarcado": "embedded system",
+"tipo de rede neural: MLPs": "multi-layer perceptrons",
+"tipo de rede neural: CNNs": "convolutional neural networks",
+"tipo de rede neural: RNNs": "recurrent neural networks",
          
 
 };
