--- a/ingles.html
+++ b/ingles.html
@@ -90,6 +90,7 @@
 "tipo de rede neural: MLPs": "multi-layer perceptrons",
 "tipo de rede neural: CNNs": "convolutional neural networks",
 "tipo de rede neural: RNNs": "recurrent neural networks",
+"áreas e sub-áreas da inteligência artificial": "ai,ml,nn,dl",   
          
 
 };
