--- a/ingles.html
+++ b/ingles.html
@@ -90,7 +90,51 @@
 "tipo de rede neural: MLPs": "multi-layer perceptrons",
 "tipo de rede neural: CNNs": "convolutional neural networks",
 "tipo de rede neural: RNNs": "recurrent neural networks",
-"áreas e sub-áreas da inteligência artificial": "ai,ml,nn,dl",   
+"áreas e sub-áreas da inteligência artificial": "ai,ml,nn,dl", 
+"único neurônio com apenas uma camada de entrada e nenhuma camada oculta" : "perceptron",
+"inteligência artificial": "artificial intelligence",
+"rede neural": "neural network",
+"aprendizado de máquina": "machine learning",
+"aprendizado profundo": "deep learning",
+"modelo preditivo": "predictive model",
+"visão computacional": "computer vision",
+"processamento de linguagem natural": "natural language processing",
+"algoritmo genético": "genetic algorithm",
+"conjunto de dados": "dataset",
+"treinamento": "training",
+"validação cruzada": "cross-validation",
+"precisão": "accuracy",
+"taxa de erro": "error rate",
+"classificação": "classification",
+"regressão": "regression",
+"supervisionado": "supervised",
+"não supervisionado": "unsupervised",
+"reforço": "reinforcement",
+"hiperparâmetros": "hyperparameters",
+"função de custo": "cost function",
+"camada oculta": "hidden layer",
+"ativação": "activation",
+"função de ativação": "activation function",
+"rede convolucional": "convolutional neural network",
+"rede recorrente": "recurrent neural network",
+"overfitting": "overfitting",
+"underfitting": "underfitting",
+"generalização": "generalization",
+"representação vetorial": "vector representation",
+"tokenização": "tokenization",
+"embedding": "embedding",
+"transformador": "transformer",
+"atendimento automatizado": "automated customer service",
+"chatbot": "chatbot",
+"modelo de linguagem": "language model",
+"geração de texto": "text generation",
+"interpretação de sentimentos": "sentiment analysis",
+"classificador binário": "binary classifier",
+"mineração de dados": "data mining",
+"inteligência computacional": "computational intelligence",
+"algoritmo de decisão": "decision algorithm"
+
+
          
 
 };
