--- a/ingles.html
+++ b/ingles.html
@@ -115,28 +115,20 @@
 "camada oculta": "hidden layer",
 "ativação": "activation",
 "função de ativação": "activation function",
-"rede convolucional": "convolutional neural network",
-"rede recorrente": "recurrent neural network",
-"overfitting": "overfitting",
-"underfitting": "underfitting",
+"rede neural convolucional": "convolutional neural network",
+"rede neural recorrente": "recurrent neural network",
 "generalização": "generalization",
 "representação vetorial": "vector representation",
 "tokenização": "tokenization",
-"embedding": "embedding",
 "transformador": "transformer",
 "atendimento automatizado": "automated customer service",
-"chatbot": "chatbot",
 "modelo de linguagem": "language model",
 "geração de texto": "text generation",
-"interpretação de sentimentos": "sentiment analysis",
 "classificador binário": "binary classifier",
 "mineração de dados": "data mining",
 "inteligência computacional": "computational intelligence",
 "algoritmo de decisão": "decision algorithm"
-
-
          
-
 };
 
 
