--- a/ingles.html
+++ b/ingles.html
@@ -127,7 +127,43 @@
 "classificador binário": "binary classifier",
 "mineração de dados": "data mining",
 "inteligência computacional": "computational intelligence",
-"algoritmo de decisão": "decision algorithm"
+"algoritmo de decisão": "decision algorithm",
+"rede neural": "neural network",
+"rede neural artificial": "artificial neural network",
+"camada": "layer",
+"camada de entrada": "input layer",
+"camada oculta": "hidden layer",
+"camada de saída": "output layer",
+"neurônio artificial": "artificial neuron",
+"pesos": "weights",
+"viés": "bias",
+"função de ativação": "activation function",
+"função sigmoide": "sigmoid function",
+"função ReLU": "ReLU function",
+"função softmax": "softmax function",
+"backpropagação": "backpropagation",
+"propagação direta": "forward propagation",
+"gradiente descendente": "gradient descent",
+"taxa de aprendizado": "learning rate",
+"época": "epoch",
+"batch": "batch",
+"tamanho do batch": "batch size",
+"perda": "loss",
+"função de perda": "loss function",
+"rede convolucional": "convolutional neural network",
+"rede recorrente": "recurrent neural network",
+"rede densa": "dense network",
+"normalização em batch": "batch normalization",
+"explosão de gradiente": "gradient explosion",
+"desvanecimento do gradiente": "gradient vanishing",
+"parâmetros treináveis": "trainable parameters",
+"memória de longo prazo": "long-term memory",
+"memória de curto prazo": "short-term memory",
+"rede profunda": "deep network",
+"modelo raso": "shallow model",
+"treinamento supervisionado": "supervised training",
+"otimizador": "optimizer",
+"função objetivo": "objective function"
          
 };
 
