--- a/ml.html
+++ b/ml.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo de Tradução</title>
+    <title>Jogo de Machine Learning</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,7 +29,7 @@
 </head>
 <body>
 
-    <h1>Termos em Inglês</h1>
+    <h1>Termos de Machine Learning</h1>
     <p>Digite o termo referente à definição apresentada:</p>
     <div id="question"></div>
     <input type="text" id="answer" placeholder="Digite sua resposta aqui">
@@ -58,7 +58,7 @@
 "Crie um DataFrame do pandas (df) com os dados do dataset de iris (iris)": "df=pd.DataFrame(data=iris.data,columns=iris.feature_names)",
 "Importe a biblioteca do Pandas com o apelido (alias) tradicional": "import pandas as pd",
 "Importe a biblioteca, o módulo e a função usadas para dividir dados do dataset em partes": "from sklearn.model_selection import train_test_split",
-"Divide as features e os rótulos do dataset IRIS em conjuntos de treino e teste, com separação aleatória reproduzível": "X_train,X_test,y_train,y_test=train_test_split(iris['data'],iris['target'],random_state=0)
+"Divide as features e os rótulos do dataset IRIS em conjuntos de treino e teste, com separação aleatória reproduzível": "X_train,X_test,y_train,y_test=train_test_split(iris['data'],iris['target'],random_state=0)"
 
 
 
