--- a/direito-penal/index.html
+++ b/direito-penal/index.html
@@ -45,7 +45,7 @@
 <body>
   <h1>Índice de Arquivos de Direito - João Ricardão</h1>
   <ul>
-    <li><a href="direito-penal/concurso_agentes.html">Verificador de Concurso de Agentes</a></li>
+    <li><a href="concurso_agentes.html">Verificador de Concurso de Agentes</a></li>
   </ul>
   <footer>© 2025 João Ricardão</footer>
 </body>
