--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <li><a href="direito-processual-civil-1.html">Direito Processual Civil 1</a></li>
     <li><a href="transferencia_tecnologia.html">Transferência de Tecnologia</a></li>
     <li><a href="direito-geral.html">Direito Geral</a></li>
+    <li><a href="projeto_pesquisa.html">Projeto de Pesquisa</a></li>
   </ul>
   <footer>© 2025 João Ricardão</footer>
 </body>
